Added 'pan velocity'

--- a/src/components/content-drawer/content-drawer.html
+++ b/src/components/content-drawer/content-drawer.html
@@ -1,4 +1,9 @@
 <!-- Generated template for the ContentDrawerComponent component -->
-<div>
-  {{text}}
-</div>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Drag me</ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content no-padding>
+  <ng-content></ng-content>
+</ion-content>
